# src/Controller/Api/StudentController.php
@@ -10,8 +10,6 @@ use App\Security\Role;
 use App\Service\UtilityService;
 use App\Service\StudentService;
 
-
-
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Attribute\Route;
@@ -55,32 +53,33 @@ class StudentController extends AbstractController
     #[OA\Response(response: 200, description: 'Zwraca listę studentów')]
     #[OA\Response(response: 404, description: 'Not Found')]
     #[Route('/students', name: 'api_students', methods: ['GET'])]
-    public function getStudents()
+    public function getStudents() : Response
     {
         $students = $this->studentService->findAllStudents();
+        $data = [];    
 
-        $data = [];
-
-        $linksConfig = [
-            'self' => [
-                'route' => 'api_students_id',
-                'param' => 'id',
-                'method' => 'GET'
-            ],
-            'loginData' => [
-                'route' => 'api_students_login',
-                'param' => 'id',
-                'method' => 'GET'
-            ],
-            'allCourses' => [
-                'route' => 'api_students_login',
-                'param' => 'id',
-                'method' => 'GET'
-        ] ];
-       
         foreach ($students as $student) {
+            $idUser = $student->getUser() ? $student->getUser()->getId() : null;
+
+            $linksConfig = [
+                'self' => [
+                    'route' => 'api_students_id',
+                    'param' => 'id',
+                    'method' => 'GET'
+                ],
+                'loginData' => [
+                    'route' => 'api_users_id',
+                    'param' => 'id',
+                    'method' => 'GET',
+                    'value' => $idUser
+                ],
+                'allCourses' => [
+                    'route' => 'api_students_login',
+                    'param' => 'id',
+                    'method' => 'GET'
+                ]
+            ];
             $studentData = $student->toArray();
-            //$studentData['login'] = $student->getUser() ? $student->getUser()->toArray() : null;
             $studentData['_links'] = $this->utilityService->generateHateoasLinks($student, $linksConfig);
 
             $data[] = $studentData;
@@ -95,9 +94,7 @@ class StudentController extends AbstractController
      *
      * Wywołanie wyświetla szczegóły studenta o podanym identyfikatorze.
      * 
-     */ 
-    #[Route('/students/{id}', name: 'api_students_id', methods: ['GET'])]
-    #[OA\Tag(name: "Operacje na studentach")]
+     */     
     #[OA\Response(
         response: 200,
         description: 'Zwraca studenta o podanym identyfikatorze',
@@ -110,6 +107,7 @@ class StudentController extends AbstractController
         response: 404,
         description: 'Not Found'
     )]   
+    #[Route('/students/{id}', name: 'api_students_id', methods: ['GET'])]
     public function getStudentById(int $id): Response
     {
         $student = $this->studentService->findStudent($id);
@@ -121,6 +119,7 @@ class StudentController extends AbstractController
         }
 
         $data = [];
+        $idUser = $student->getUser() ? $student->getUser()->getId() : null;
 
         $linksConfig = [
             'self' => [
@@ -129,9 +128,10 @@ class StudentController extends AbstractController
                 'method' => 'GET'
             ],
             'loginData' => [
-                'route' => 'api_students_login',
+                'route' => 'api_users_id',
                 'param' => 'id',
-                'method' => 'GET'
+                'method' => 'GET',
+                'value' => $idUser
             ],
             'allCourses' => [
                 'route' => 'api_students_login',
@@ -147,70 +147,13 @@ class StudentController extends AbstractController
         return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
     }
 
-
-
-
-
-
-
-    /**
-     * Wyświetla login studenta.
-     *
-     * Wywołanie wyświetla login studenta o podanym identyfikatorze.
-     * 
-     */ 
-    #[OA\Tag(name: "Operacje na studentach")]
-    #[OA\Response(response: 200, description: 'Zwraca login studenta o podanym identyfikatorze', content: new OA\JsonContent(
-            type: 'array',
-            items: new OA\Items(ref: new Model(type: Student::class))
-        ))
-    ]
-    #[OA\Response(
-        response: 404,
-        description: 'Not Found'
-    )]
-    #[Route('/students/{id}/login', name: 'api_students_login', methods: ['GET'])]
-    public function getStudentLogin(int $id) : Response
-    {
-        $student = $this->studentService->findStudent($id);
-        $login = $this->studentService->findStudentLogin($id);
-
-        if (!$login) {
-            return $this->json(['error' => 'Nie znaleziono loginu dla studenta o id: ' . $id], JsonResponse::HTTP_NOT_FOUND);
-        }
-
-        $data =[];
-
-        $linksConfig = [
-            'self' => [
-                'route' => 'api_students_login',
-                'param' => 'id',
-                'method' => 'GET' ],
-            'parent' => [
-                'route' => 'api_students_id',
-                'param' => 'id',
-                'method' => 'GET'
-            ]
-            ];
-
-
-        $data['login'] = $login ? $login->toArray() : null;
-        $data['login']['_links'] = $this->utilityService->generateHateoasLinks($login, $linksConfig);
-
-        $jsonContent = $this->utilityService->serializeJson($data);
-        return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
-    }
-
-   
-
+    
     /**
      * Dodaje nowego studenta.
      *
      * Wywołanie dodaje nowego studenta na podstawie przekazanych danych.
      * 
      */ 
-    #[Route('/students', name: 'api_students_create', methods: ['POST'])]
-    #[OA\Tag(name: "Operacje na studentach")]
     #[OA\Response(
         response: 201,
         description: 'Dodaje studenta',
@@ -228,20 +171,22 @@ class StudentController extends AbstractController
         required: true,
         content: new OA\JsonContent(ref: "#/components/schemas/NewStudent")
     )] 
-    public function createStudent(Request $request): Response
+    #[Route('/students', name: 'api_students_add', methods: ['POST'])]
+    public function addStudent(Request $request): Response
     {
-        // Pobranie danych z żądania
-        $data = json_decode($request->getContent(), true);
-        
-        // Sprawdzenie, czy przekazano wymagane dane
-        if (!isset($data['name']) || !isset($data['email']) || !isset($data['username']) || !isset($data['password'])){        
-            // Jeśli nie przekazano wymaganych danych, zwróć odpowiedź z błędem 400
+        try {
+            // Pobranie i walidacja danych
+            $data = $this->utilityService->validateAndDecodeJson($request, ['name', 'email', 'username', 'password']);
+        } catch (\Exception $e) {
+            // Obsługa wyjątków
             return $this->json(['error' => 'Nie przekazano wymaganych danych'], JsonResponse::HTTP_BAD_REQUEST);
         }
 
-        // utworzenie studenta
-        $newStudent = $this->utilityService->addStudent($data['name'], $data['email'], $data['username'], $data['password']);  
-        
+       
+        // Dodanie nowego studenta
+        $newStudent = $this->studentService->createStudentWithPassword($data['name'], $data['email'], $data['username'], $data['password']);
+        $idUser = $updatedStudent->getUser() ? $updatedStudent->getUser()->getId() : null;
+
         $data = [];
 
         $linksConfig = [
@@ -250,31 +195,183 @@ class StudentController extends AbstractController
                 'param' => 'id',
                 'method' => 'GET'
             ],
-            'login' => [
-                'route' => 'api_students_login',
+            'loginData' => [
+                'route' => 'api_users_id',
                 'param' => 'id',
-                'method' => 'GET'
-            ]
+                'method' => 'GET',
+                'value' => $idUser
+            ],
         ];
 
         $studentData = $newStudent->toArray();
-        $studentData['_links'] = $this->utilityService->generateHateoasLinks($newStudent, $linksConfig, $this->urlGenerator);
+        $studentData['_links'] = $this->utilityService->generateHateoasLinks($newStudent, $linksConfig);
         $data[] = $studentData;
 
-        $jsonContent = $this->serializer->serialize($data, 'json', \JMS\Serializer\SerializationContext::create()->setSerializeNull(true));
-        return new Response($jsonContent, 201, ['Content-Type' => 'application/json']);
-        return $this->json($data, JsonResponse::HTTP_CREATED);
+        $jsonContent = $this->utilityService->serializeJson($data);
+        return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
+
+    }
+
+    /**
+     * Edytuje lub tworzy studenta.
+     *
+     * Wywołanie pozwala na edycję studenta o podanym identyfikatorze.
+     * 
+     */
+    #[OA\Response(
+        response: 200,
+        description: 'Edytuje studenta o podanym identyfikatorze',
+        content: new OA\JsonContent(
+            type: 'array',
+            items: new OA\Items(ref: new Model(type: Student::class))
+        ))
+    ]
+    #[OA\Response(
+        response: 400,
+        description: 'Bad Request'
+    )]   
+    #[OA\RequestBody(
+        description: 'Dane studenta do aktualizacji',
+        required: true,
+        content: new OA\JsonContent(ref: "#/components/schemas/EditStudent")
+    )] 
+    #[Route('/students/{id}', name: 'api_students_update', methods: ['PUT'])]
+    public function editStudent(int $id, Request $request): Response
+    {
+        try {
+            // Pobranie i walidacja danych
+            $data = $this->utilityService->validateAndDecodeJson($request, ['name', 'email']);
+        } catch (\Exception $e) {
+            // Obsługa wyjątków
+            return $this->json(['error' => 'Nie przekazano wymaganych danych'], JsonResponse::HTTP_BAD_REQUEST);
+        }
+
+        // Edycja studenta
+        $editedStudent = $this->studentService->editStudent($id, $data['name'], $data['email']);
+        $idUser = $updatedStudent->getUser() ? $updatedStudent->getUser()->getId() : null;
+
+        $data = [];
+
+        $linksConfig = [
+            'self' => [
+                'route' => 'api_students_id',
+                'param' => 'id',
+                'method' => 'GET'
+            ],
+            'loginData' => [
+                'route' => 'api_users_id',
+                'param' => 'id',
+                'method' => 'GET',
+                'value' => $idUser
+            ],
+        ];
+
+        $studentData = $editedStudent->toArray();
+        $studentData['_links'] = $this->utilityService->generateHateoasLinks($editedStudent, $linksConfig);
+        $data[] = $studentData;
+
+        $jsonContent = $this->utilityService->serializeJson($data);
+        return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
     }
 
 
+    /**
+     * Aktualizacja studenta. PATCH
+     *
+     * Wywołanie aktualizuje użytkownika o podanym id lub tworzy nowego użytkownika.
+     * 
+     */
+    #[OA\Response(
+        response: 200,
+        description: 'Aktualizuje studenta o podanym identyfikatorze',
+        content: new OA\JsonContent(
+            type: 'array',
+            items: new OA\Items(ref: new Model(type: Student::class))
+        ))
+    ]
+    #[OA\Response(
+        response: 400,
+        description: 'Bad Request'
+    )]
+    #[OA\RequestBody(
+        description: 'Dane studenta do aktualizacji',
+        required: true,
+        content: new OA\JsonContent(ref: "#/components/schemas/EditStudent")
+    )]
+    #[Route('/students/{id}', name: 'api_students_patch', methods: ['PATCH'])]
+    public function updateStudent(int $id, Request $request): Response
+    {
+        $data = json_decode($request->getContent(), true);
+        if (json_last_error() !== JSON_ERROR_NONE) {
+            return $this->json(['error' => 'Invalid JSON'], Response::HTTP_BAD_REQUEST);
+        }
+
+        try {
+            $updatedStudent = $this->studentService->updateStudentFields($id, $data);
+            $idUser = $updatedStudent->getUser() ? $updatedStudent->getUser()->getId() : null;
+
+            $linksConfig = [
+                'self' => [
+                    'route' => 'api_students_id',
+                    'param' => 'id',
+                    'method' => 'GET'
+                ],
+                'loginData' => [
+                    'route' => 'api_users_id',
+                    'param' => 'id',
+                    'method' => 'GET',
+                    'value' => $idUser
+                ],
+            ];
+
+            $studentData['student_info'] = $updatedStudent->toArray();
+            $studentData['_links'] = $this->utilityService->generateHateoasLinks($updatedStudent, $linksConfig);
+            $status = ['status' => 'Zaktualizowano studenta.' ];
+            $data = array_merge($status, $studentData);
+            
+            $jsonContent = $this->utilityService->serializeJson($data);
+            return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
+        
+        } catch (\Exception $e) {           
+            return $this->json(['error' => $e->getMessage()], Response::HTTP_NOT_FOUND);
+        }   
+    }
 
 
+    /**
+     * Usuwa studenta.
+     *
+     * Wywołanie pozwala na usunięcie studenta o podanym identyfikatorze.
+     * 
+     */
+    #[OA\Response(
+        response: 204,
+        description: 'Usuwa studenta o podanym identyfikatorze'
+    )]
+    #[OA\Response(
+        response: 404,
+        description: 'Not Found'
+    )]
+    #[Route('/students/{id}', name: 'api_students_delete', methods: ['DELETE'])]
+    public function deleteStudent(int $id): Response
+    {        
+        try {
+            $this->studentService->deleteStudent($id);
+            return $this->json(['status' => 'Usunięto studenta.'], Response::HTTP_OK);
+        } catch (\Exception $e) {           
+            return $this->json(['error' => $e->getMessage()], Response::HTTP_NOT_FOUND);
+        }
+    }
 
-
-
-    // /students/3001/courses
+    /**
+     * Wyświetla kursy studenta.
+     *
+     * Wywołanie wyświetla kursy studenta o podanym identyfikatorze.
+     * 
+     */
+        // /students/3001/courses
     #[Route('/students/{id}/courses', name: 'api_students_courses', methods: ['GET'])]
-    #[OA\Tag(name: "Operacje na studentach")]
+    #[OA\Tag(name: "Operacje na kursach")]
     #[OA\Response(
         response: 200,
         description: 'Zwraca listę kursów studenta o podanym identyfikatorze',
